Change the flee function to become a depend function instead

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div id="combat-log"></div>
         <div id="actions">
             <div class="action-group combat-actions">
-                <button onclick="attack()">Attack</button>
-                <button onclick="useItem()">Use Item</button>
-                <button onclick="flee()">Flee</button>
+                <button onclick="attack()">Attack 🗡</button>
+                <button onclick="useItem()">Use Item 𖠩</button>
+                <button onclick="defend()">Defend 🛡</button> <!-- Changed from Flee -->
             </div>
             <div class="action-group utility-actions">
                 <button onclick="showInventory()">Show Inventory</button>
@@ -41,7 +41,7 @@
         <button onclick="backToMenu()" class="back-btn">Back to Menu</button>
     </div>
 
-    <div id="shop" class="screen" style="display: none;">
+    <div id="shop" class="screen" style="display: none;"> <!-- Added shop screen -->
         <table id="shop-table">
             <thead>
                 <tr>
