--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
             <p class="enemy">Enemy HP: <span id="enemy-hp">0</span> | ATK: <span id="enemy-atk">0</span> | Multiplier: <span id="enemy-multiplier">1.0x</span></p>
         </div>
         <div id="battle-area">
-            <img id="player-img" src="src/img/player.jpg" alt="Player">
-            <img id="enemy-img" src="src/img/enemy1.jpg" alt="Enemy">
+            <div class="character-container">
+                <img id="player-effect" class="player-effect-gif" src="" alt="Effect" style="display: none;">
+                <img id="player-img" src="src/img/player.jpg" alt="Player">
+            </div>
+            <div class="character-container">
+                <img id="enemy-effect" class="enemy-effect-gif" src="" alt="Effect" style="display: none;">
+                <img id="enemy-img" src="src/img/enemy1.jpg" alt="Enemy">
+            </div>
         </div>
         <div id="combat-log"></div>
         <div id="actions">
@@ -60,15 +66,19 @@
                 </tr>
                 <tr>
                     <td><img src="src/img/crit-shard.gif" alt="Crit Sword" class="shop-item-img"></td>
-                    <td><button onclick="buyItem('Crit Shard', 30, 'critChance', 0.1)">Buy Crit Shard (+10% Crit) - <span class="price">30</span> Coins</button></td>
+                    <td><button onclick="buyItem('Crit Shard', 75, 'critChance', 0.01)">Buy Crit Shard (+1% Crit) - <span class="price">75</span> Coins</button></td>
+                </tr>
+                <tr>
+                    <td><img src="src/img/desolator.gif" alt="Desolator" class="shop-item-img"></td>
+                    <td><button onclick="buyItem('Desolator', 150, 'critChance', 0.05)">Buy Desolator (+5% Crit) - <span class="price">150</span> Coins</button></td>
                 </tr>
                 <tr>
                     <td><img src="src/img/armor-shard.gif" alt="Armor Shard" class="shop-item-img"></td>
-                    <td><button onclick="buyItem('Armor Shard', 40, 'blockChance', 0.1)">Buy Armor Shard (+10% Block) - <span class="price">40</span> Coins</button></td>
+                    <td><button onclick="buyItem('Armor Shard', 75, 'blockChance', 0.01)">Buy Armor Shard (+1% Block) - <span class="price">75</span> Coins</button></td>
                 </tr>
                 <tr>
                     <td><img src="src/img/sword-shard.gif" alt="Sword Shard" class="shop-item-img"></td>
-                    <td><button onclick="buyItem('Sword Shard', 50, 'atk', 5)">Buy Sword Shard (+5 ATK) - <span class="price">50</span> Coins</button></td>
+                    <td><button onclick="buyItem('Sword Shard', 75, 'atk', 1)">Buy Sword Shard (+5 ATK) - <span class="price">75</span> Coins</button></td>
                 </tr>
             </tbody>
             <tfoot>
