Separated js files for cleaner code

--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
         <button onclick="toggleHistory()">Close</button>
     </div>
 
-    <script src="game.js"></script>
+    <!-- Game Script Files  -->
+    <script src="src/js/state.js"></script> <!-- Added state.js -->
+    <script src="src/js/menu.js"></script> <!-- Added menu.js -->
+    <script src="src/js/combat.js"></script> <!-- Added combat.js -->
+    <script src="src/js/inventory.js"></script> <!-- Added inventory.js -->
+    <script src="src/js/shop.js"></script> <!-- Added shop.js -->
+    <script src="src/js/ui.js"></script> <!-- Added ui.js -->
+    <script src="src/js/game.js"></script> <!-- Added game.js -->
 </body>
 </html>
